Fixed sidebar not showing up when browser size is too small. Worked more on 2014 form by adding field image and some inputs for auton and teleop. Added increment and decrement buttons in JS. ALso, I'm making everything bigger than what they probably need to be so we can have room to work with stuff.

--- a/design/css/scout3000.css
+++ b/design/css/scout3000.css
@@ -50,6 +50,10 @@
 	background-clip: padding-box;
 }
 
+.sidebar.affix {
+	position:static;
+}
+
 .sidenav > li > a {
 	color: #333333;
 	padding: 10px 20px;
@@ -110,4 +114,35 @@
 .team-data-text {
 	position: relative;
 	bottom: 10px;
+}
+@media screen and (min-width: 992px) {
+  .sidebar .nav > .active > ul {
+    display: block;
+  }
+  /* Widen the fixed sidebar */
+  .sidebar.affix,
+  .sidebar.affix-bottom,
+  .sidebar.affix-top {
+    width: 213px;
+  }
+  .sidebar.affix {
+    position: fixed; /* Undo the static from mobile first approach */
+    /*top: 20px;*/
+  }
+  .sidebar.affix-bottom {
+    position: absolute; /* Undo the static from mobile first approach */
+  }
+  .sidebar.affix-bottom .sidenav,
+  .sidebar.affix .sidenav {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  /* Widen the fixed sidebar again */
+  .sidebar.affix-bottom,
+  .sidebar.affix-top,
+  .sidebar.affix {
+    width: 263px;
+  }
 }
